# sochi

./: .gitignore  .gitmodules  Cargo.toml  Makefile  README.md  build.rs  confuzzius.sh  first.sol  ilf_script.sh  mythril_script.sh  rust-toolchain.toml  second.sol
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  investigation.md
benchmarks/Confuzzius/assertion_failure/: gas_model.confuzzius  (+14 more)
benchmarks/SolidiFI/: mythril_integer.sh  mythril_re-entrancy.sh  mythril_timestamp_dep.sh  mythril_tx_origin.sh  mythril_unchecked_send.sh  mythril_unhandled_exceptions.sh
benchmarks/unified-dataset/: README.md  mythril_CV.sh  mythrill_MI.sh
examples/: call_graph.sol  flipper.sol  overflow.sol
examples/demo/: dao.sol  timelock.sol
papers/: papers.md
results/: ISSTA'21.md  SolidiFI.md  slither.md
rutil/: .gitignore  .rustfmt.toml  Cargo.toml  Makefile  README.md
rutil/src/: arg.rs  debug.rs  lib.rs  macros.rs  report.rs  string.rs  system.rs
rutil/tests/: main.rs  test_util.rs
src/: cli.rs  lib.rs  sochi.rs
src/compile/: mod.rs  solc.rs
src/tools/: confuzzius.rs  ilf.rs  mod.rs  mythril.rs  slither.rs  solc.rs
tests/TOD/: buggy_1.confuzzius  buggy_2.confuzzius
tests/contracts/: flipper.sol
tests/error/: test.slither  test.sol
tests/re-entrancy/: buggy_1.slither  buggy_2.slither
tests/timestamp/: buggy_1.confuzzius  buggy_2.confuzzius
tests/unchecked_send/: buggy_1.confuzzius  buggy_2.confuzzius
tests/unhanled_exceptions/: buggy_1.confuzzius  buggy_1.slither  buggy_2.confuzzius  buggy_2.slither
(+1835 files in other folders)
