[package]
name = "rutil"
authors = ["Verazt's authors and contributors"]
version = "0.1.1"
edition = "2021"

[features]
linting = []

# Dependencies should be alphabetically sorted.
# Use package version in form of "x.y" to avoid updating them frequently.
[dependencies]
clap = "3.1"
remain = "0.2"
termsize = { package = "terminal_size", version = "0.1" }
textwrap = "0.15"
